@@ -1,20 +1,68 @@
 plugins {
-    id 'groovy'
+    id 'java'
+    id 'application'
+    id 'org.javamodularity.moduleplugin' version '1.8.12'
+    id 'org.openjfx.javafxplugin' version '0.0.13'
+    id 'org.beryx.jlink' version '2.25.0'
 }
 
 group = 'com.github.wohaopa'
 version = '0.3.0'
 
+sourceCompatibility = '17'
+targetCompatibility = '17'
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
+application {
+    mainModule = 'com.github.wohaopa.zpl.ui.zplui'
+    mainClass = 'com.github.wohaopa.zpl.ui.zplui.ZPLApplication'
+}
+
+javafx {
+    version = '17.0.2'
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.base']
+}
+
 repositories {
     mavenCentral()
+    maven {
+        url 'https://maven.aliyun.com/nexus/content/groups/public/'
+    }
 }
 
 dependencies {
-    implementation 'org.apache.groovy:groovy:4.0.2'
+    implementation 'com.jfoenix:jfoenix:9.0.10'
+
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
 test {
     useJUnitPlatform()
+}
+
+jlink {
+    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    launcher {
+        name = 'app'
+    }
+}
+
+jlinkZip {
+    group = 'distribution'
+}
+
+tasks.register('runZPL', JavaExec) {
+
+    classpath = sourceSets.test.runtimeClasspath
+    mainClass = 'boot.Main'
+    jvmArgs += ["--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"]
+
+    systemProperty("zpl.rootDir", "D:\\DevProject\\JavaProject\\ZeroPointLaunch\\TestResources\\.GTNH")
+    systemProperty("zpl.url", "http://127.0.0.1")
+
 }
